Added sidebar without collapsed menu

--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -4,7 +4,7 @@
   <nav class="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="home.html">
-        <img src="../../../assets/img/logo.svg" alt="" srcset="">
+      
       </a>
       <div class="d-flex">
 
@@ -27,7 +27,7 @@
       </div>
     </div>
   </nav>
-
+  <app-sidebar></app-sidebar>
   <div class="col">
     <div class="row">
       <div class="home-phrases">
