--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,9 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Importing Bootstrap SCSS file. */
+@import "node_modules/bootstrap-icons/font/bootstrap-icons";
 @import "bootstrap/scss/bootstrap";
+@import "bootstrap/scss/variables";
 
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+
+*{
+  margin: 0;
+  padding: 0;
+}
 
 body {
   font-family: "Poppins";
@@ -25,3 +33,12 @@ body {
   width: 160px;
   height: 45px;
 }
+
+
+.btn-primary{
+  width: 100%;
+  background: $primary-color !important;
+  border-color: $primary-color !important;
+  border-radius: 0;
+}
+
