--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -22,59 +22,49 @@
      <ul *ngIf="isExpanded" [ngClass]="{'nav nav-pills flex-column mb-sm-auto mb-0 align-items-center align-items-sm-start': isExpanded, 'nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center justify-content-between w-100 px-3 align-items-center': !isExpanded}"  class="" id="menu">
         <li class="nav-item">
             <a href="#" class="nav-link align-middle px-0">
-                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Home</span>
+                <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline">Inicio</span>
             </a>
         </li>
         <li class="nav-item">
-            <a href="#submenu1" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                <i class="fs-4 bi-speedometer2"></i> <span class="ms-1 d-none d-sm-inline">Dashboard</span> </a>
-            <ul class="collapse show nav flex-column ms-1" id="submenu1" data-bs-parent="#menu">
-                <li class="w-100">
-                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1 </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2 </a>
-                </li>
-            </ul>
+            <a href="#submenu1" class="nav-link px-0 align-middle">
+                <i class="fs-4 bi-person"></i> <span class="ms-1 d-none d-sm-inline">CEO & Fundador</span> </a>
+           
+        </li>
+        
+        <li class="nav-item">
+            <a href="#" class="nav-link px-0 align-middle">
+                <i class="bi bi-gear-fill"></i><span class="ms-1 d-none d-sm-inline">Ingeniería</span></a>
         </li>
         <li class="nav-item">
             <a href="#" class="nav-link px-0 align-middle">
-                <i class="fs-4 bi-table"></i> <span class="ms-1 d-none d-sm-inline">Orders</span></a>
+                <i class="bi bi-calendar-check"></i> <span class="ms-1 d-none d-sm-inline">Planeación</span></a>
         </li>
         <li class="nav-item">
-            <a href="#submenu2" data-bs-toggle="collapse" class="nav-link px-0 align-middle ">
-                <i class="fs-4 bi-bootstrap"></i> <span class="ms-1 d-none d-sm-inline">Bootstrap</span></a>
-            <ul class="collapse nav flex-column ms-1" id="submenu2" data-bs-parent="#menu">
-                <li class="w-100">
-                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 1</a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Item</span> 2</a>
-                </li>
-            </ul>
+            <a href="#submenu2" class="nav-link px-0 align-middle ">
+                <i class="bi bi-tv"></i><span class="ms-1 d-none d-sm-inline">Contenidos</span></a>
         </li>
         <li class="nav-item">
-            <a href="#submenu3" data-bs-toggle="collapse" class="nav-link px-0 align-middle">
-                <i class="fs-4 bi-grid"></i> <span class="ms-1 d-none d-sm-inline">Products</span> </a>
-            <ul class="collapse nav flex-column ms-1" id="submenu3" data-bs-parent="#menu">
-                <li class="w-100">
-                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 1</a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 2</a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 3</a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link px-0"> <span class="d-none d-sm-inline">Product</span> 4</a>
-                </li>
-            </ul>
+            <a href="#submenu2" class="nav-link px-0 align-middle ">
+                <i class="bi bi-cash"></i> <span class="ms-1 d-none d-sm-inline">Finanzas</span></a>
         </li>
         <li class="nav-item">
-            <a href="#" class="nav-link px-0 align-middle">
-                <i class="fs-4 bi-people"></i> <span class="ms-1 d-none d-sm-inline">Customers</span> </a>
+            <a href="#submenu2" class="nav-link px-0 align-middle ">
+                <i class="bi bi-soundwave"></i>  <span class="ms-1 d-none d-sm-inline">Comunicaciones</span></a>
         </li>
+        <li class="nav-item">
+            <a href="#submenu2" class="nav-link px-0 align-middle ">
+                <i class="bi bi-cast"></i> <span class="ms-1 d-none d-sm-inline">Judicial</span></a>
+        </li>
+        <li class="nav-item">
+            <a href="#submenu2" class="nav-link px-0 align-middle ">
+                <i class="bi bi-people"></i><span class="ms-1 d-none d-sm-inline">Recursos humanos</span></a>
+        </li>
+        <li class="nav-item">
+            <a href="#submenu2" class="nav-link px-0 align-middle ">
+                <i class="bi bi-newspaper"></i><span class="ms-1 d-none d-sm-inline">Marketing</span></a>
+        </li>
+        
+        
     </ul>
     <ul  *ngIf="!isExpanded"   class="nav nav-pills nav-flush flex-sm-column flex-row flex-nowrap mb-auto mx-auto text-center justify-content-between w-100 px-3 align-items-center">
         <li class="nav-item">
