--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -27,12 +27,16 @@
       </div>
     </div>
   </nav>
-
+  <app-information  title="string"
+  enviroment="hola mundo"
+  description=""
+  image="dios"></app-information>
   <div class="col">
     <div class="row">
       <div class="home-phrases">
         <h1>{{bannerPhrases?.welcome}}</h1>
         <p>{{bannerPhrases?.promo}}</p>
+        
       </div>
     </div>
   </div>
