Added pull information

--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -27,14 +27,12 @@
       </div>
     </div>
   </nav>
-  <app-information  title="string"
-  enviroment="hola mundo"
-  description=""
-  image="dios"></app-information>
+  
   <app-sidebar></app-sidebar>
   <div class="col">
     <div class="row">
       <div class="home-phrases">
+        <app-information></app-information>
         <h1>{{bannerPhrases?.welcome}}</h1>
         <p>{{bannerPhrases?.promo}}</p>
         
