--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -4,7 +4,7 @@
   <nav class="navbar">
     <div class="container-fluid">
       <a class="navbar-brand" href="home.html">
-      
+
       </a>
       <div class="d-flex">
 
@@ -27,15 +27,29 @@
       </div>
     </div>
   </nav>
-  
+
   <app-sidebar></app-sidebar>
-  <div class="col">
+  <div class="container" style="color:black !important">
     <div class="row">
-      <div class="home-phrases">
-        <app-information></app-information>
-        <h1>{{bannerPhrases?.welcome}}</h1>
-        <p>{{bannerPhrases?.promo}}</p>
-        
+     
+      
+      <div class="row">
+        <div class="col col-md-4" *ngFor="let i of moviesPreview">
+          <div class="card">
+            <img src="{{i[1]}}" class="card-img-top" alt="Fissure in Sandstone" />
+            <div class="card-body">
+              <h5 class="card-title">{{i[0]}}</h5>
+              <p class="card-text">{{i[3]}}</p>
+
+              <a href="{{i[2]}}" target="_blank" rel="noopener noreferrer">
+                <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                  <i class="bi bi-camera-reels"></i> Trailer
+                </button>
+              </a>
+            </div>
+          </div>
+      </div>
+      <app-information></app-information>
       </div>
     </div>
   </div>
