--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,3 +1,37 @@
-<p>
-  login works!
-</p>
+<div class="container-fluid netflix-background">
+
+  <nav class="navbar">
+    <div class="container-fluid">
+      <a class="navbar-brand" [routerLink]="['/home']">
+        <img src="../assets/img/logo.svg" alt="" srcset="">
+      </a>
+    </div>
+  </nav>
+
+  <div class="col">
+    <div class="row">
+      <div class="login-container">
+        <div class="login-content">
+          <div class="login-header mb-4">
+            <h1>Iniciar Sesión</h1>
+          </div>
+          <div class="login-body mb-5">
+            <div class="input-group login-input mb-4">
+              <input type="text" class="form-control" aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-default" placeholder="Email o número de teléfono">
+            </div>
+
+            <div class="input-group login-input mb-4">
+              <input type="text" class="form-control" aria-label="Sizing example input"
+                aria-describedby="inputGroup-sizing-default" placeholder="Contraseña">
+            </div>
+
+            <a href="admin/founders">
+              <button class="btn login-button-lg" type="button">Entrar</button>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
