--- a/src/app/shared/sidebar/sidebar.component.scss
+++ b/src/app/shared/sidebar/sidebar.component.scss
@@ -1,93 +1,80 @@
-.img-sidebar{
+@import "../../../assets/scss/variables.scss";
+
+:host {
+  .img-sidebar {
     width: 35px;
-}
-.sidebar-web{
+  }
+  .sidebar-web {
+    max-width: 240px;
+    width: 240px;
     margin: 0;
     padding: 0;
-    left:0;
+    left: 0;
     background: black !important;
     li > a {
-        color:color !important;
-        span {
-            color:white;
-        }
-        i{
-            color:white;
-        }
+      color: color !important;
+      span {
+        color: white;
+      }
+      i {
+        color: white;
+      }
     }
-    .dropdown-user{
-        a{    
-            strong {
-                color: white;
-            }
-        }
+    .dropdown-user {
+      a {
+        color: white;
+      }
     }
-}
+  }
 
-.bi-list{
-   color:white;
-}
+  .bi-list {
+    color: white;
+  }
 
-body {
-    min-height: 100vh;
-    min-height: -webkit-fill-available;
+  .dropdown-toggle {
+    outline: 0;
   }
-  
-  html {
-    height: -webkit-fill-available;
-  }
-  
-  main {
-    height: 100vh;
-    height: -webkit-fill-available;
-    max-height: 100vh;
-    overflow-x: auto;
-    overflow-y: hidden;
-  }
-  
-  .dropdown-toggle { outline: 0; }
-  
+
   .btn-toggle {
-    padding: .25rem .5rem;
+    padding: 0.25rem 0.5rem;
     font-weight: 600;
-    color: rgba(0, 0, 0, .65);
+    color: rgba(0, 0, 0, 0.65);
     background-color: transparent;
   }
   .btn-toggle:hover,
   .btn-toggle:focus {
-    color: rgba(0, 0, 0, .85);
+    color: rgba(0, 0, 0, 0.85);
     background-color: #d2f4ea;
   }
-  
+
   .btn-toggle::before {
     width: 1.25em;
     line-height: 0;
     content: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' viewBox='0 0 16 16'%3e%3cpath fill='none' stroke='rgba%280,0,0,.5%29' stroke-linecap='round' stroke-linejoin='round' stroke-width='2' d='M5 14l6-6-6-6'/%3e%3c/svg%3e");
-    transition: transform .35s ease;
-    transform-origin: .5em 50%;
+    transition: transform 0.35s ease;
+    transform-origin: 0.5em 50%;
   }
-  
+
   .btn-toggle[aria-expanded="true"] {
-    color: rgba(0, 0, 0, .85);
+    color: rgba(0, 0, 0, 0.85);
   }
   .btn-toggle[aria-expanded="true"]::before {
     transform: rotate(90deg);
   }
-  
+
   .btn-toggle-nav a {
-    padding: .1875rem .5rem;
-    margin-top: .125rem;
+    padding: 0.1875rem 0.5rem;
+    margin-top: 0.125rem;
     margin-left: 1.25rem;
   }
   .btn-toggle-nav a:hover,
   .btn-toggle-nav a:focus {
     background-color: #d2f4ea;
   }
-  
+
   .scrollarea {
     overflow-y: auto;
   }
-  
 
   .bd-placeholder-img {
     font-size: 1.125rem;
@@ -105,10 +92,10 @@ body {
 
   .b-example-divider {
     height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
+    background-color: rgba(0, 0, 0, 0.1);
+    border: solid rgba(0, 0, 0, 0.15);
     border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+    box-shadow: inset 0 0.5em 1.5em rgba(0, 0, 0, 0.1), inset 0 0.125em 0.5em rgba(0, 0, 0, 0.15);
   }
 
   .b-example-vr {
@@ -118,7 +105,7 @@ body {
   }
 
   .bi {
-    vertical-align: -.125em;
+    vertical-align: -0.125em;
     fill: currentColor;
   }
 
@@ -140,20 +127,30 @@ body {
     -webkit-overflow-scrolling: touch;
   }
 
-ul{
+  ul {
     list-style: none;
-}
-  .nav-item{
-    padding-left: 1em !important;
-    :hover{
-        cursor: pointer;
-        background-color: red !important;
-    }
-    a{
-        padding: 1em;
-        :hover{
-            cursor: pointer;
-            background-color: red !important;
-        }
+  }
+  li {
+    padding: 0px;
+
+    a {
+      padding: 1em 0px;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
     }
   }
+
+  .nav-item:hover {
+    cursor: pointer;
+    background-color: $primary-color !important;
+    font-weight: bold;
+  }
+
+  .nav-icon {
+    display: grid;
+    place-items: center;
+    padding: 1em;
+    width: 100%;
+  }
+}
