--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,26 +4,39 @@
 @import "node_modules/bootstrap-icons/font/bootstrap-icons";
 @import "bootstrap/scss/bootstrap";
 @import "bootstrap/scss/variables";
-
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import "./assets/scss/variables.scss";
 
-
-*{
+* {
   margin: 0;
   padding: 0;
 }
 
 body {
   font-family: "Poppins";
+  min-height: 100vh;
+  min-height: -webkit-fill-available;
+}
+
+html {
+  height: -webkit-fill-available;
+}
+
+main {
+  height: 100vh;
+  height: -webkit-fill-available;
+  max-height: 100vh;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .netflix-background {
   background-image: url(./assets/img/background.png);
-  filter: blur(8px);
+  /* filter: blur(8px); */
   /* height: 100%;
   width: 100%;
   z-index: -1; */
-  -webkit-filter: blur(8px);
+  /* -webkit-filter: blur(8px); */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -34,11 +47,9 @@ body {
   height: 45px;
 }
 
-
-.btn-primary{
+.btn-primary {
   width: 100%;
   background: $primary-color !important;
   border-color: $primary-color !important;
   border-radius: 0;
 }
-
