fix [solve warning]

--- a/src/app/content/form/form.component.html
+++ b/src/app/content/form/form.component.html
@@ -1,8 +1,8 @@
 <div class="col container">
   <div class="row">
     <div class="home-phrases">
-      <h1>{{bannerPhrases?.welcome}}</h1>
-      <p>{{bannerPhrases?.promo}}</p>
+      <h1>{{bannerPhrases.welcome}}</h1>
+      <p>{{bannerPhrases.promo}}</p>
       <form (ngSubmit)="sendForm()">
         <!-- Name input -->
         <div class="form-outline mb-4">
