--- a/src/app/auth/login/login.component.scss
+++ b/src/app/auth/login/login.component.scss
@@ -20,7 +20,7 @@
 .login-header {
   color: white;
   font-weight: bold;
-  text-align: start;
+  flex-direction: start;
   display: flex;
   justify-content: start;
   align-items: center;
