--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -32,7 +32,7 @@
         <span class="mb-3 mb-md-0 text-white">©2023 Uniremington</span>
       </div>
 
-      <ul class="nav col-md-4 d-flex align-items-center justify-content-end list-unstyled">
+      <ul class="nav col-md-4 d-flex align-items-center justify-content-end list-unstyled me-3">
         <li class="me-3">
           <a href="https://www.uniremington.edu.co/">
             <img src="../../assets/img/components/footer/uniremington.svg" width="25" height="25" alt="" srcset="">
