--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -58,8 +58,8 @@
     </li>
   </ul> -->
   <hr>
-  <div ngbDropdown class="nav-item d-inline-block dropdown-user">
-    <a class="d-flex align-items-center  p-3 link-light text-decoration-none dropdown-toggle" id="dropdownBasic1"
+  <div ngbDropdown class="nav-item profile-nav dropdown-user">
+    <a class="d-flex align-items-center link-light text-decoration-none dropdown-toggle w-100" id="dropdownBasic1"
       ngbDropdownToggle>
       <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
       <span>mdo</span>
