Added form solution and menu bug reported by michael

--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -33,7 +33,7 @@
       </div>
     </div>
   </div>
-  <!-- <div class="container" style="color:black !important">
+  <div class="container" style="color:black !important">
     <div class="row">
 
 
