--- a/src/app/content/form/form.component.html
+++ b/src/app/content/form/form.component.html
@@ -6,24 +6,24 @@
       <form (ngSubmit)="sendForm()">
         <!-- Name input -->
         <div class="form-outline mb-4">
-          <input type="text" id="form4Example1" name="titulo" class="form-control" />
+          <input type="text" id="form4Example1" name="titulo" [(ngModel)]="form.titulo" class="form-control" />
           <label class="form-label" for="form4Example1">Título</label>
         </div>
 
         <!-- Email input -->
         <div class="form-outline mb-4">
-          <input type="text" id="form4Example2" name="trailer" class="form-control" />
+          <input type="text" id="form4Example2" name="trailer" [(ngModel)]='form.trailer' class="form-control" />
           <label class="form-label" for="form4Example2">Trailer</label>
         </div>
 
         <div class="form-outline mb-4">
-          <input type="url" name="portada" id="form4Example2" class="form-control" />
+          <input type="url" name="portada" id="form4Example2" [(ngModel)]='form.portada' class="form-control" />
           <label class="form-label" for="form4Example2">Portada</label>
         </div>
 
         <!-- Message input -->
         <div class="form-outline mb-4">
-          <textarea class="form-control" name="sinopsis" id="form4Example3" rows="4"></textarea>
+          <textarea class="form-control" name="sinopsis" id="form4Example3" [(ngModel)]='form.sinopsis' rows="4"></textarea>
           <label class="form-label" for="form4Example3">Sinópsis</label>
         </div>
 
