fix [admin content]

--- a/src/app/admin/rrhh/rrhh.component.html
+++ b/src/app/admin/rrhh/rrhh.component.html
@@ -1,7 +1,7 @@
 <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
     <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button"
-      role="tab" aria-controls="nav-home" aria-selected="true">Comunicaciones</button>
+      role="tab" aria-controls="nav-home" aria-selected="true">Recursos humanos</button>
   </div>
 </nav>
 
@@ -9,20 +9,20 @@
   <div class="tab-pane fade show active" id="nav-home" role="tabpanel" aria-labelledby="nav-home-tab">
     <div class="row">
       <div class="col">
-        <h1>Comunicaciones</h1>
-        <section>
-          <h4>Ambiente</h4>
-          <ul>
-            <li><b>CCO Comunicaciones</b></li>
-          </ul>
-        </section>
+        <h1>Recursos humanos</h1>
 
         <section>
+          <h4>Talento y Reclutamiento</h4>
           <p>
-            El equipo de Comunicaciones de Netflix es responsable de contar la historia más amplia de Netflix, incluidos
-            productos, asociaciones, problemas de política, cultura, ejecutivos y gestión de problemas. Se crea
-            conciencia sobre Netflix y sus atributos a través de la narración de historias en una amplia gama de
-            plataformas de medios tradicionales, como periódicos, revistas, noticias de radio y televisión.
+            El equipo de talentos de Netflix es responsable de identificar, atraer y desarrollar. Este equipo incluye
+            Reclutamiento, Servicios para Empleados y Socios.
+
+            El equipo de Bienes Raíces Corporativos, Salud de los Empleados, Lugar de Trabajo y Seguridad está
+            comprometido a crear entornos y experiencias de Netflix a nivel mundial que hagan avanzar el negocio. Esto
+            incluye satisfacer las necesidades inmobiliarias de Netflix a medida que la empresa sigue evolucionando;
+            ejecutar una variedad de proyectos de capital de principio a fin; crear experiencias laborales efectivas,
+            inclusivas y flexibles; y proporcionar programas de seguridad y protección para respaldar funciones
+            corporativas y de producción.
           </p>
         </section>
 
