--- a/src/app/shared/sidebar/sidebar.component.html
+++ b/src/app/shared/sidebar/sidebar.component.html
@@ -1,8 +1,8 @@
 <div class="d-flex flex-column flex-shrink-0 p-0 bg-light sidebar-web"
   style="height: 100vh; position: fixed; top:0; z-index: 99999;">
   <span class="nav-icon">
-    <a href="/">
-      <img src="../../../assets/img/logo.svg" class="img-sidebar-web" *ngIf="isExpanded" alt="">
+    <a style="margin-top: 15px" href="/">
+      <img height="35px" src="../../../assets/img/logo.svg" class="img-sidebar-web" *ngIf="isExpanded" alt="">
       <img src="../../../assets/img/netflix.svg" class="img-sidebar" *ngIf="!isExpanded" alt="">
     </a>
     <!-- <div class="col-md-4" style="text-align: right;">
