--- a/src/app/admin/contents/contents.component.html
+++ b/src/app/admin/contents/contents.component.html
@@ -1,3 +1,13 @@
+<div class="row">
+  <div class="col d-flex justify-content-end">
+    <a [routerLink]="['/admin/add']">
+      <button class="btn btn-primary w-auto" type="button">Gestor de contenidos</button>
+    </a>
+  </div>
+</div>
+
+<hr>
+
 <nav>
   <div class="nav nav-tabs" id="nav-tab" role="tablist">
     <button class="nav-link active" id="nav-home-tab" data-bs-toggle="tab" data-bs-target="#nav-home" type="button"
