--- a/src/app/shared/home/home.component.html
+++ b/src/app/shared/home/home.component.html
@@ -33,9 +33,9 @@
       </div>
     </div>
   </div>
-  <div class="container" style="color:black !important">
-    <div class="row">
 
+  <!-- <div class="container" style="color:black !important">
+    <div class="row">
 
       <div class="row">
         <div class="col col-md-4" *ngFor="let i of moviesPreview">
