--- a/src/app/content/form/form.component.html
+++ b/src/app/content/form/form.component.html
@@ -12,7 +12,7 @@
       <div class="col d-flex align-items-center justify-content-center" style="background: white;">
         <div class="col-4 p-4 d-flex justify-content-center">
           <div class="card">
-            <img src="{{form.portada || 'https://i.stack.imgur.com/mwFzF.png'}}" class="card-img-top"
+            <img src="{{form.portada || 'https://i.stack.imgur.com/mwFzF.png'}}"
               alt="Fissure in Sandstone" />
             <div class="card-body">
               <h5 class="card-title">{{form.titulo}}</h5>
@@ -65,28 +65,37 @@
   </div>
 </div>
 
-<div class="container-fluid">
-  <div class="row">
-    <div class="col col-md-4" *ngFor="let i of moviesPreview">
-      <div class="card">
-        <img src="{{i[1]}}" class="card-img-top" alt="Fissure in Sandstone" />
-        <div class="card-body">
-          <h5 class="card-title">{{i[0]}}</h5>
-          <p class="card-text">{{i[3]}}</p>
 
-          <a href="{{i[2]}}" target="_blank" rel="noopener noreferrer">
-            <button type="button" class="btn btn-primary" (click)="seeTrailer(i[2])" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">
-              <i class="bi bi-camera-reels"></i> Trailer
-            </button>
-          </a>
+<div class="container-fluid information-nefilis" style="background: black;">
+  <br>
+  <h3 id="home" class="text-white p-1">New releases</h3>
+  <div class="row">
+    <div class="col col-md-2" style="margin:0.5em" *ngFor="let i of moviesPreview">
+      <div class="flip-card">
+        <div class="flip-card-inner">
+          <div class="flip-card-front">
+            <img src="{{i[1]}}" alt="Avatar" style="width:300px;height:300px;">
+          </div>
+          <div class="flip-card-back">
+            <h1>{{i[0]}}</h1>
+            <div class="text">
+              <p style="object-fit: contain;  word-wrap: break-word;">{{i[3]}}</p>
+            </div>
+            <a href="{{i[2]}}" target="_blank" rel="noopener noreferrer">
+              <button type="button" class="btn btn-primary" (click)="seeTrailer(i[2])">
+                <i class="bi bi-camera-reels"></i> Trailer
+              </button>
+            </a>
+          </div>
         </div>
       </div>
+
     </div>
   </div>
 </div>
 
 <div class="container-fluid" style="background: black;">
+
   <app-information></app-information>
 </div>
 
